styles/global.css
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --content-primary: #ffffff;
  --content-secondary: #c7c9cc;
  --content-tertiary: #d9d9d9;
  --content-brand: #c58de7;
  --content-inverse: #030203;

  --bg-primary: #020202;
  --bg-secondary: #111012;
  --bg-tertiary: #24222e;
  --bg-brand: #c58de7;
  --bg-gray: #3d3d3d;

  --accent-pink: #d586e0;
  --accent-green: #77c0af;
  --accent-lime: #d1dc97;
  --accent-red: #e9a9b3;

  --gradient-border: linear-gradient(
    #77c0af 0%,
    #d1dc97 14.84%,
    #e9a9b3 32.15%,
    #d586e0 65.79%,
    #91a1fa 84.58%
  );
  --gradient-bg: linear-gradient(#d586e0 0%, #91a1fa 98.93%);
  --gradient-content: linear-gradient(-270deg, #c7c9cc 0%, #3d3d3d 150%);

  --ff-sora: "Sora", sans-serif;
  --ff-roboto-mono: "Roboto Mono", monospace;
  --ff-roboto-flex: "Roboto Flex", sans-serif;

  --display-lg: 800 4.5rem/130% var(--ff-sora);
  --display-md: 800 2.5rem/130% var(--ff-sora);
  --display-sm: 700 2rem/130% var(--ff-sora);

  --overline: 700 1rem/150% var(--ff-roboto-mono);

  --paragraph-lg: 500 1rem/150% var(--ff-roboto-flex);
  --paragraph-md: 500 0.875rem/150% var(--ff-roboto-flex);
  --paragraph-sm: 500 0.75rem/150% var(--ff-roboto-flex);
  --label-md: 700 1.25rem/150% var(--ff-roboto-flex);
  --label-sm: 700 1rem/150% var(--ff-roboto-flex);
}
body {
  background-color: var(--bg-primary);
  color: white;
  &::after {
    position: absolute;
    content: "";
    background: linear-gradient(
        -180deg,
        rgba(0, 0, 0, 0.9) 22.66%,
        rgba(0, 0, 0, 0.54) 100%
      ),
      url(../assets/Shapes.png);
    height: 100%;
    inset: 0;
    z-index: -1;
  }
}

a{
  text-decoration: none;
}

.container{
    margin-inline: auto;
    max-width: 30rem;
    padding-inline: 2.1875rem;
    margin-block: 2.75rem;
}

.desktop-only {
  display: none;
}
@media (width > 80em) {
  .desktop-only {
    display: initial;
  }
  .mobile-only {
    display: none;
  }
  .container{
    margin-inline: auto;
    max-width: 85.375rem;
    padding-inline: 4.375rem;
    margin-block: 4.75rem;
}
}

